<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>streaming.king</groupId>
    <artifactId>streamingpro</artifactId>
    <packaging>pom</packaging>
    <version>0.4.14-SNAPSHOT-${mode}</version>
    <modules>
        <module>streamingpro-flink</module>
        <module>streamingpro-spark</module>
        <module>streamingpro-commons</module>
        <module>streamingpro-spark-2.0</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <scala.version>2.10.3</scala.version>
        <scala.binary.version>2.10</scala.binary.version>
        <spark.version>1.6.1</spark.version>
        <flink.version>1.2.0</flink.version>
        <spark.sql.kafka.artifactId>spark-streaming-kafka_2.10</spark.sql.kafka.artifactId>
        <streamingpro.version>0.4.7</streamingpro.version>
        <spark.streaming.kafka.artifactId>spark-streaming-kafka_2.10</spark.streaming.kafka.artifactId>
        <serviceframework.version>1.3.2-SNAPSHOT-${scala.binary.version}</serviceframework.version>
        <scope>provided</scope>
    </properties>


    <repositories>
        <repository>
            <id>artima</id>
            <name>Artima Maven Repository</name>
            <url>http://repo.artima.com/releases</url>
        </repository>
        <repository>
            <id>cloudera</id>
            <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
        </repository>
    </repositories>

    <profiles>

        <profile>
            <id>online</id>
            <properties>
                <mode>online</mode>
                <scope>provided</scope>
            </properties>
        </profile>
        <profile>
            <id>dev</id>
            <properties>
                <mode>dev</mode>
                <scope>provided</scope>
            </properties>
        </profile>
        <profile>
            <id>local</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <mode>local</mode>
                <scope>compile</scope>
            </properties>
        </profile>

    </profiles>
    <dependencies>

        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.version}</version>
            <scope>${scope}</scope>
        </dependency>

        <!--<dependency>-->
        <!--<groupId>org.ansj</groupId>-->
        <!--<artifactId>ansj_seg</artifactId>-->
        <!--<version>5.0</version>-->
        <!--<scope>system</scope>-->
        <!--<systemPath>${project.basedir}/lib/ansj_seg-5.0.0-all-in-one.jar</systemPath>-->
        <!--</dependency>-->


        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>fluent-hc</artifactId>
            <version>4.3.2</version>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>2.9.3</version>
        </dependency>
        <dependency>
            <groupId>org.joda</groupId>
            <artifactId>joda-convert</artifactId>
            <version>1.8.1</version>
        </dependency>

        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-compiler</artifactId>
            <version>${scala.version}</version>
        </dependency>

        <dependency>
            <groupId>net.liftweb</groupId>
            <artifactId>lift-json_2.10</artifactId>
            <version>2.6.2</version>
        </dependency>
        <dependency>
            <groupId>net.csdn</groupId>
            <artifactId>ServiceFramework</artifactId>
            <version>1.3.2-SNAPSHOT-${scala.binary.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>jcl-over-slf4j</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>jcl-over-slf4j</artifactId>
                </exclusion>
                <!--<exclusion>-->
                <!--<groupId>org.eclipse.jetty</groupId>-->
                <!--<artifactId>jetty-server</artifactId>-->
                <!--</exclusion>-->
                <!--<exclusion>-->
                <!--<groupId>org.eclipse.jetty</groupId>-->
                <!--<artifactId>jetty-servlet</artifactId>-->
                <!--</exclusion>-->
                <!--<exclusion>-->
                <!--<groupId>org.eclipse.jetty</groupId>-->
                <!--<artifactId>jetty-io</artifactId>-->
                <!--</exclusion>-->
                <!--<exclusion>-->
                <!--<groupId>org.eclipse.jetty</groupId>-->
                <!--<artifactId>jetty-http</artifactId>-->
                <!--</exclusion>-->
                <!--<exclusion>-->
                <!--<groupId>org.eclipse.jetty</groupId>-->
                <!--<artifactId>jetty-util</artifactId>-->
                <!--</exclusion>-->
                <!--<exclusion>-->
                <!--<groupId>org.eclipse.jetty</groupId>-->
                <!--<artifactId>jetty-continuation</artifactId>-->
                <!--</exclusion>-->
                <!--mongo相关-->
                <exclusion>
                    <groupId>net.csdn</groupId>
                    <artifactId>MongoMongo</artifactId>
                </exclusion>

                <!--ORM(hibernate)相关-->
                <exclusion>
                    <groupId>net.csdn</groupId>
                    <artifactId>ActiveORM</artifactId>
                </exclusion>

                <!--thrift相关-->
                <exclusion>
                    <groupId>org.apache.thrift</groupId>
                    <artifactId>libthrift</artifactId>
                </exclusion>
                <!--<exclusion>-->
                <!--<groupId>org.apache.httpcomponents</groupId>-->
                <!--<artifactId>httpclient</artifactId>-->
                <!--</exclusion>-->
                <!--<exclusion>-->
                <!--<groupId>mysql</groupId>-->
                <!--<artifactId>mysql-connector-java</artifactId>-->
                <!--</exclusion>-->

                <!--<exclusion>-->
                <!--<groupId>org.apache.velocity</groupId>-->
                <!--<artifactId>velocity</artifactId>-->
                <!--</exclusion>-->
                <exclusion>
                    <groupId>com.101tec</groupId>
                    <artifactId>zkclient</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.alibaba</groupId>
                    <artifactId>dubbo</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>junit</groupId>
                    <artifactId>junit</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.scala-lang</groupId>
                    <artifactId>jline</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>serviceframework</groupId>
            <artifactId>Dispatcher</artifactId>
            <version>1.0-SNAPSHOT-${scala.binary.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>net.csdn</groupId>
                    <artifactId>ServiceFramework</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
            <version>2.2.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>jcl-over-slf4j</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-log4j12</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>jcl-over-slf4j</artifactId>
                </exclusion>
            </exclusions>
        </dependency>



        <dependency>
            <groupId>org.scalactic</groupId>
            <artifactId>scalactic_2.10</artifactId>
            <version>3.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest_2.10</artifactId>
            <version>3.0.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.22</version>
        </dependency>

    </dependencies>
    <build>

        <sourceDirectory>src/main/java/</sourceDirectory>
        <resources>
            <resource>
                <directory>src/main/resources-${mode}</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.8.1</version>
                <configuration>
                    <includes>
                        <include>**/*.java</include>
                        <include>**/*.scala</include>
                    </includes>
                    <skipTests>true</skipTests>
                </configuration>

            </plugin>


            <plugin>
                <groupId>org.scalatest</groupId>
                <artifactId>scalatest-maven-plugin</artifactId>
                <version>1.0</version>
                <executions>
                    <execution>
                        <id>test</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <argLine>-XX:MaxPermSize=128m</argLine>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.scala-tools</groupId>
                <artifactId>maven-scala-plugin</artifactId>
                <version>2.15.2</version>
                <configuration>
                    <args>
                        <arg>
                            -g:vars
                        </arg>
                    </args>
                    <verbose>true</verbose>
                </configuration>
                <executions>
                    <execution>
                        <id>scala-compile-first</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>scala-test-compile</id>
                        <phase>process-test-resources</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <compilerArgument>-g</compilerArgument>
                    <verbose>true</verbose>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>

            </plugin>


            <!--   要将源码放上去，需要加入这个插件    -->
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.1</version>
                <configuration>
                    <attach>true</attach>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <configuration>
                    <compilerPlugins>
                        <compilerPlugin>
                            <groupId>com.artima.supersafe</groupId>
                            <artifactId>supersafe_2.10.7</artifactId>
                            <version>1.1.0-RC7</version>
                        </compilerPlugin>
                    </compilerPlugins>
                </configuration>
            </plugin>


        </plugins>
    </build>
    <distributionManagement>
        <repository>
            <id>releases</id>
            <name>releases</name>
            <url>http://mvn.letv.com/nexus/content/repositories/releases/</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <url>http://mvn.letv.com/nexus/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>
